Redmine 3.3: Fix missing Current project

--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -1506,6 +1506,9 @@ a:visited,
 #header h1 a {
   color: #1d4e6d;
 }
+#header h1 .breadcrumbs {
+  display: block;
+}
 #sidebar h3 {
   color: #295e82;
 }
