--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -372,6 +372,8 @@ a.issue.closed:visited {
   text-shadow: 0 1px 0 rgba(0, 0, 0, 0.3);
   word-wrap: break-word;
   z-index: 50;
+  overflow: visible;
+  white-space: pre-wrap;
 }
 #header h1 a {
   font-size: 14px;
