Redmine 3.3: Disable/Hide Menu Tab buttons
NOTE: REVERT WHEN YOU FIGURE OUT WHERE THEY'll GO.

--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -454,6 +454,9 @@ a.issue.closed:visited {
   font-weight: bold;
   text-shadow: none;
 }
+#main-menu .tabs-buttons {
+  display: none;
+}
 #footer {
   border-top: 1px solid #CCCCCC;
   clear: left;
