--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -454,9 +454,6 @@ a.issue.closed:visited {
   font-weight: bold;
   text-shadow: none;
 }
-#main-menu .tabs-buttons {
-  display: none;
-}
 #footer {
   border-top: 1px solid #CCCCCC;
   clear: left;
@@ -1475,7 +1472,8 @@ dt.time-entry {
   content: "\f0ad";
 }
 #main-menu .tabs-buttons {
-  display: none;
+  right: 15px;
+  bottom: -24px;
 }
 /*---------- Colors ----------*/
 /* Links */
