--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -343,14 +343,19 @@ a.issue.closed:visited {
 
 #project-jump .drdn-trigger
 {
-	line-height: 30px;
-	height: 35px;
+	line-height: normal;
+	height: 21px;
+	font-size: 13px;
+	text-align: left;
 }
 
 #project-jump .drdn-content
 {
-  width: 198px;
+  /*width: 198px;*/
+  width: 203px;
   margin-top: 10px;
+  top: 20px
+}
 
 /*Included to fix Projects Page Columns.  See https://www.redmine.org/issues/26853 */
 #projects-index {
@@ -359,6 +364,21 @@ a.issue.closed:visited {
 	-moz-column-width: auto;
 }
 
+.drdn-items
+{
+  /*padding: 4px 4px;*/
+  line-height: 15px;
+  text-align: left;
+  font-size: 13px;
+  padding: inherit;
+}
+
+.drdn-items>* {
+  padding:2px 8px;
+}
+
+.drdn-content .autocomplete {
+	height:24px;
 }
 
 #header a {
@@ -388,12 +408,13 @@ a.issue.closed:visited {
   font-family: "Trebuchet MS", Verdana, sans-serif;
   font-size: 24px;
   font-weight: bold;
-  margin: 15px 0;
+  /*margin: 15px 0;*/
   text-align: left;
   text-shadow: 0 1px 0 rgba(0, 0, 0, 0.3);
   z-index: 50;
   overflow: visible;
   white-space: pre-wrap;
+  float: left;
 }
 #header h1 a {
   font-size: 14px;
@@ -427,6 +448,7 @@ a.issue.closed:visited {
   left: 0;
 }
 #main-menu ul {
+  margin-top: 125px;
   margin-left: -15px;
   width: auto;
 }
@@ -991,6 +1013,8 @@ div.wiki dl {
   position: relative;
   z-index: 2;
   padding: 0;
+  /* Add for Anonymous Project (tabs) */
+  line-height: 35px;
 }
 #content > .contextual > * {
   margin-left: 5px;
@@ -1100,8 +1124,9 @@ tr.message.sticky td.subject {
   -webkit-border-radius: 6px;
   -moz-border-radius: 6px;
   border-radius: 6px;
-  min-height: 617px;
-  min-width: 90%;
+/*  min-height: 617px; */
+/*  min-width: 90%; */
+  margin: 15em auto 2em auto;
 }
 #login-form table {
   background: none;
@@ -1546,12 +1571,16 @@ a:visited,
 }
 #header h1 {
   color: #e0f2f9;
+  width: 100%;
+  padding-bottom: 20px;
+  margin-bottom: 5px;
 }
 #header h1 a {
   color: #1d4e6d;
 }
 #header h1 .breadcrumbs {
   display: block;
+  font-weight: inherit;
 }
 #sidebar h3 {
   color: #295e82;
@@ -1561,7 +1590,7 @@ a:visited,
   background: #222222;
 }
 #login-form label {
-  color: #cccccc;
+/*  color: #cccccc; */ 
 }
 /* Buttons */
 input[type="submit"],
@@ -1650,3 +1679,13 @@ body.stealth_on #header {
 body.stealth_on #header {
   background: #555;
 }
+
+#quick-search #q {
+	/*height: inherit;*/
+	height: 21px;
+	width: 120px;
+}
+
+#project-jump.drdn {width:100%;}
+.drdn-content .quick-search {margin:1px 3px 3px 3px;}
+
